--- a/s3gc.in
+++ b/s3gc.in
@@ -54,14 +54,16 @@ lastdate=$((current-deltasec))
 rm -f s3gc.json
 
 # Get complete set of keys in ${S3TESTSUBTREE} prefix
-if ! aws s3api list-objects-v2 --bucket ${S3TESTBUCKET} --prefix "${S3TESTSUBTREE}" | grep -F '"Key":' >s3gc.keys ; then
+if ! aws s3api list-objects-v2 --bucket ${S3TESTBUCKET} --prefix "/${S3TESTSUBTREE}" | grep -F '"Key":' >s3gc.keys ; then
     echo "No keys found"
     rm -f s3gc.json
     exit 0
 fi
-aws s3api list-objects-v2 --bucket ${S3TESTBUCKET} --prefix "${S3TESTSUBTREE}" | grep -F '"Key":' >s3gc.keys
+aws s3api list-objects-v2 --bucket ${S3TESTBUCKET} --prefix "/${S3TESTSUBTREE}" | grep -F '"Key":' >s3gc.keys
 while read -r line; do
-  KEY=`echo "$line" | sed -e 's|[^"]*"Key":[^"]*"\([^"]*\)".*|\1|'`
+  KEY0=`echo "$line" | sed -e 's|[^"]*"Key":[^"]*"\([^"]*\)".*|\1|'`
+  # Strip off any leading '/'
+  KEY=`echo "$KEY0" | sed -e 's|^[/]*\(.*\)|\1|'`
   # Ignore keys that do not start with ${S3TESTSUBTREE}
   PREFIX=`echo "$KEY" | sed -e 's|\([^/]*\)/.*|\1|'`
   if test "x$PREFIX" = "x$S3TESTSUBTREE" ; then
@@ -117,4 +119,4 @@ while test "x$REM" != x ; do
         aws s3api delete-objects --bucket ${S3TESTBUCKET} --delete "file://s3gc.json"
     fi
 done
-rm -f s3gc.json
+#rm -f s3gc.json
