--- a/test_common.in
+++ b/test_common.in
@@ -43,6 +43,7 @@ FEATURE_NCZARR=@HAS_NCZARR@
 FEATURE_S3TESTS=@ENABLE_S3_TESTING@
 FEATURE_NCZARR_ZIP=@DO_NCZARR_ZIP_TESTS@
 FEATURE_LARGE_TESTS=@DO_LARGE_TESTS@
+FEATURE_NCZARR_FORMAT=@NCZARR_DEFAULT_FORMAT@
 
 # Thredds-test server is currently disabled
 #FEATURE_THREDDSTEST=1
