--- a/s3gc.in
+++ b/s3gc.in
@@ -54,12 +54,12 @@ lastdate=$((current-deltasec))
 rm -f s3gc.json
 
 # Get complete set of keys in ${S3TESTSUBTREE} prefix
-if ! aws s3api list-objects-v2 --bucket ${S3TESTBUCKET} --prefix "/${S3TESTSUBTREE}" | grep -F '"Key":' >s3gc.keys ; then
+if ! aws s3api list-objects-v2 --bucket ${S3TESTBUCKET} --prefix "${S3TESTSUBTREE}" | grep -F '"Key":' >s3gc.keys ; then
     echo "No keys found"
     rm -f s3gc.json
     exit 0
 fi
-aws s3api list-objects-v2 --bucket ${S3TESTBUCKET} --prefix "/${S3TESTSUBTREE}" | grep -F '"Key":' >s3gc.keys
+aws s3api list-objects-v2 --bucket ${S3TESTBUCKET} --prefix "${S3TESTSUBTREE}" | grep -F '"Key":' >s3gc.keys
 while read -r line; do
   KEY0=`echo "$line" | sed -e 's|[^"]*"Key":[^"]*"\([^"]*\)".*|\1|'`
   # Strip off any leading '/'
