--- a/configure.ac
+++ b/configure.ac
@@ -2272,9 +2272,8 @@ AC_CONFIG_FILES([nc_perf/run_gfs_test.sh], [chmod ugo+x nc_perf/run_gfs_test.sh]
 AC_CONFIG_FILES([examples/C/run_par_test.sh], [chmod ugo+x examples/C/run_par_test.sh])
 AC_CONFIG_FILES([nc-config], [chmod 755 nc-config])
 
-# Config and copy into nczarr_[v3_]test
+# Config and copy into nczarr_test
 AC_CONFIG_FILES(nczarr_test/findplugin.sh:nc_test4/findplugin.in, [chmod ugo+x nczarr_test/findplugin.sh])
-AC_CONFIG_FILES(v3_nczarr_test/findplugin.sh:nc_test4/findplugin.in, [chmod ugo+x v3_nczarr_test/findplugin.sh])
 for fp in unit_test/timer_utils.h unit_test/timer_utils.h unit_test/timer_utils.c nc_test4/test_filter.c nc_test4/test_filter_misc.c nc_test4/tst_multifilter.c nc_test4/test_filter_repeat.c nc_test4/test_filter_order.c ; do
   FN=`basename $fp`
   AC_CONFIG_FILES(nczarr_test/${FN}:${fp})
@@ -2324,7 +2323,6 @@ AC_CONFIG_FILES([Makefile
                  dap4_test/Makefile
                  plugins/Makefile
 		 nczarr_test/Makefile
- 		 v3_nczarr_test/Makefile
                  ])
 AC_OUTPUT()
 
