--- a/s3gc.in
+++ b/s3gc.in
@@ -98,6 +98,7 @@ for key in $ALLKEYS ; do
     case "$key" in
         "$S3TESTSUBTREE/nczarr_test_"*) captureuid "nczarr_test" ;;
         "$S3TESTSUBTREE/v3_nczarr_test_"*) captureuid "v3_nczarr_test" ;;
+        "$S3TESTSUBTREE/v3_tests_"*) captureuid "v3_tests" ;;
         "$S3TESTSUBTREE/testset_"*) captureuid "testset" ;;
         *) if test "x$VERBOSE" = x1; then echo "Ignoring \"$key\""; fi ;;
     esac
