--- a/nczarr_test/Makefile.am
+++ b/nczarr_test/Makefile.am
@@ -12,10 +12,11 @@ check_PROGRAMS =
 
 include $(top_srcdir)/nczarr_test/Makefile.files
 
-BUILT_SOURCES += ${ALLBUILTSCRIPTS}
+BUILT_SOURCES += ${DISTBUILTSCRIPTS}
 
 # V2 specific files
-EXTRA_DIST += CMakeLists.txt Makefile.core Makefile.files ${ALLV2BASELINE} ${ALLV2SCRIPTS}
+EXTRA_DIST += CMakeLists.txt Makefile.core Makefile.files ${DISTV2BASELINE} ${DISTV2SCRIPTS} \
+	${DISTBASELINE} ${DISTSCRIPTS}
 
 include $(top_srcdir)/nczarr_test/Makefile.core
 
