--- a/nc_test4/Makefile.am
+++ b/nc_test4/Makefile.am
@@ -154,7 +154,7 @@ tmp_bzip2.c bzip2.nc noop.nc tmp_*.dmp tmp_*.cdl
 DISTCLEANFILES = findplugin.sh run_par_test.sh
 
 clean-local:
-	rm -fr testdir_* testset_*
+	rm -fr ${builddir}/nc_test4_*
 
 # If valgrind is present, add valgrind targets.
 @VALGRIND_CHECK_RULES@
