--- a/ncdump/Makefile.am
+++ b/ncdump/Makefile.am
@@ -251,4 +251,5 @@ scope_*.nc copy_scope_*.cdl keyword5.nc tst_enum_undef.cdl tst_times_nc4.cdl
 
 # Remove directories
 clean-local:
-	rm -fr rcmergedir rchome testset_*
+	rm -fr ncdump_* testset_*
+	rm -fr rcmergedir rchome
